# krkr_voice

./: CMakeLists.txt  LICENSE  README.md  test.ks
src/: krkrvoice.cpp  krkrvoice.hpp  krkrvoice_win.cpp  krkrvoice_win.hpp  main.cpp  plugin.cpp
